2018-03-04, S3QL 2.26

  * Added support for py.test 3.3.0
  * Improved metadata rotation performance.

2018-01-05, S3QL 2.25

  * s3qlctrl now accepts a new *dropcache* command.
  * Fixed a race condition that resulted in mount.s3ql crashing with
    "I/O operation on closed file". Thanks to www.imCode.com for
    sponsoring this work!

2017-11-04, S3QL 2.24

  * fsck.s3ql now accepts a new --force-remote parameter. It does
    dangerous things, and you should probably not use it.

  * When terminated by a signal (rather than by an unmount call),
    mount.s3ql now terminates as quickly as possible (i.e., without
    cleaning the cache), resulting in an unclean unmount.

  * The Swift backend feature detection is no longer affected by the
    no-ssl backend option (which is intended only for connections to
    the authentication server).

  * Accessing the cn-north-1 S3 storage region is now working.

2017-08-18, S3QL 2.23

  * Accessing the us-east-1 S3 storage region is now working again.

  * Retry for some additional SSL Errors. Unfortunately we're playing
    whack-a-mole here.

  * The swift backend now dynamically detects the features supported
    by the backend server.

  * The swift backend now supports optimized object copy and bulk
    deletion (if supported by the server).

2017-06-23, S3QL 2.22

  * The storage URL for Amazon S3 buckets has changed. It now includes
    the bucket's region.

  * Added support for AWS v4 authentication. Thanks to ibbchina.com
    for sponsoring this work!

2016-10-28, S3QL 2.21

  * Added workaround for an issue where S3QL crashes with an
    "ssl.SSLError: [SSL: BAD_WRITE_RETRY]" exception. This problem has
    to be fixed in Python, but we now work around it by closing and
    re-opening the connection when it occurs.

2016-08-24, S3QL 2.20

  * Fixed a problem with exporting S3QL file systems over NFS4,
    where directory contents would appear in duplicate.

2016-06-27, S3QL 2.19
